language-server/src/tests/snapshots/gleam_language_server__tests__action__unwrap_anonymous_function_with_comment_after.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  fn(a) {\n    op(a)\n    // look out!\n  }\n}\n\nfn op(a) {\n  todo\n}\n"
---
----- BEFORE ACTION
pub fn main() {
  fn(a) {
  ↑      
    op(a)
    // look out!
  }
}

fn op(a) {
  todo
}


----- AFTER ACTION
pub fn main() {
  op// look out!
  
}

fn op(a) {
  todo
}
