language-server/src/tests/snapshots/gleam_language_server__tests__action__wrap_anonymous_function_in_anonymous_function.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  let f = fn(in) { ception(in) }\n}\n\n"
---
----- BEFORE ACTION
pub fn main() {
  let f = fn(in) { ception(in) }
          ↑                     
}



----- AFTER ACTION
pub fn main() {
  let f = fn(value) { fn(in) { ception(in) }(value) }
}
