language-server/src/tests/snapshots/gleam_language_server__tests__action__wrap_call_arg_in_anonymous_function.snap
---
source: language-server/src/tests/action.rs
expression: "import gleam/list\n\npub fn main() {\n    list.map([1, 2, 3], op)\n}\n\nfn op(i: Int) -> Int {\n    todo\n}\n"
---
----- BEFORE ACTION
import gleam/list

pub fn main() {
    list.map([1, 2, 3], op)
                        ↑  
}

fn op(i: Int) -> Int {
    todo
}


----- AFTER ACTION
import gleam/list

pub fn main() {
    list.map([1, 2, 3], fn(int) { op(int) })
}

fn op(i: Int) -> Int {
    todo
}
