language-server/src/tests/snapshots/gleam_language_server__tests__action__wrap_capturing_pipeline_step_in_anonymous_function.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  1 |> wibble(2, _) |> wobble\n}\n\nfn wibble(a, b) {\n  todo\n}\n\nfn wobble(i) {\n  todo\n}\n\n"
---
----- BEFORE ACTION
pub fn main() {
  1 |> wibble(2, _) |> wobble
       ↑                     
}

fn wibble(a, b) {
  todo
}

fn wobble(i) {
  todo
}



----- AFTER ACTION
pub fn main() {
  1 |> fn(int) { wibble(2, _)(int) } |> wobble
}

fn wibble(a, b) {
  todo
}

fn wobble(i) {
  todo
}
